# TrafficSimulation2022

./: .gitignore  BusStop.cpp  BusStop.h  CMakeLists.txt  CrossRoad.cpp  CrossRoad.h  DesignByContract.h  Exceptions.h  ExtraFunctionTest.cpp  ExtraFunctions.cpp  ExtraFunctions.h  ParserJSON.h  ParserXML.cpp  ParserXML.h  README.md  Road.cpp  Road.h  Simulation1.xml  Simulation2.xml  Simulation3.xml  Simulation7.xml  Standard_Values.cpp  Standard_Values.h  TrafficLight.cpp  TrafficLight.h  TrafficLightTest.cpp  TrafficLightTest.h  TrafficSimulation.cpp  TrafficSimulation.h  TrafficSimulation2022.rar  TrafficSimulationMain.cpp  TrafficSimulationReader.cpp  TrafficSimulationReader.h  TrafficSimulationTests.cpp  Vehicle.cpp  Vehicle.h  VehicleGenerator.cpp  VehicleGenerator.h
Engine/: View_DIrections.txt  filelist  simulation1.ini
TestFiles/JSON/: Simulation0.json  Simulation1.json  Simulation10.json  Simulation11.json  Simulation12.json  Simulation13.json  Simulation14.json  Simulation15.json  Simulation16.json  Simulation17.json  Simulation2.json  Simulation3.json  Simulation4.json  Simulation5.json  Simulation6.json  Simulation7.json  Simulation8.json  Simulation9.json
TestFiles/XML/: Simulation0.xml  Simulation1.xml  Simulation11.xml  Simulation12.xml  Simulation14.xml  Simulation15.txt  Simulation15.xml  Simulation16.xml  Simulation18.xml  Simulation9.xml  engine  ts  ts_debug
TestFiles/XML/OutputLog/: Dummy.txt  Simulation15(3).txt
TestFiles/XML/Permanent_logs/: EmptyParameterLogFail.txt  busLogSucces.txt  roadLogSIM18.txt  roadLogSucces.txt  statsFalse.txt  statsSim16.txt  statsVAmbulance.txt  statsVBus.txt  statsVFiretruck.txt  statsVPolice.txt  trafficLightLogSIM18.txt  vehicleLogSIM18.txt
TestFiles/XML/Stats/: Stats.txt
TestFiles/XML/TestLog/: log.txt  testLog.txt
TestFiles/XML/TestLog/BusLog/: busLog.txt
TestFiles/XML/TestLog/CrossRoadLog/: crossroadLog.txt
TestFiles/XML/TestLog/TrafficLightLog/: trafficLightLog.txt
TestFiles/XML/TestLog/VehicleGeneratorLog/: vehicleGeneratorLog.txt
TestFiles/XML/TestLog/VehicleLog/: vehicleLog.txt
UI_Design/: TrafficMainWindow.ui
